# dxvk-nvapi

./: .gitmodules  README.md  meson.build  package-release.sh  validate-methods.py
inc/: nvapi.h  nvapi_interface.h
src/: meson.build  mock_d3d12NvMetaCommand.h  nvapi.cpp  nvapi_d3d.cpp  nvapi_d3d11.cpp  nvapi_d3d12.cpp  nvapi_disp.cpp  nvapi_drs.cpp  nvapi_gpu.cpp  nvapi_interface.cpp  nvapi_interface_private.h  nvapi_mosaic.cpp  nvapi_ngx.cpp  nvapi_private.h  nvapi_private_functions.h  nvapi_sys.cpp  nvapi_vulkan.cpp  nvofapi.cpp  nvofapi_cuda.cpp  nvofapi_d3d11.cpp  nvofapi_d3d12.cpp  nvofapi_vk.cpp
src/interfaces/: vkd3d-proton_interfaces.h
src/nvapi/: nvapi_adapter.cpp  nvapi_adapter.h  nvapi_adapter_registry.cpp  nvapi_as_convert.cpp  nvapi_as_convert.h  nvapi_d3d11_device.cpp  nvapi_d3d12_device.cpp  nvapi_d3d12_device.h  nvapi_d3d12_graphics_command_list.cpp  nvapi_d3d12_graphics_command_list.h  nvapi_output.cpp  nvapi_output.h  nvapi_vulkan_low_latency_device.cpp  nvapi_vulkan_low_latency_device.h  nvapi_vulkan_low_latency_device_factory.cpp  nvapi_vulkan_low_latency_device_factory.h  nvml.cpp  nvml.h
src/nvofapi/: nvofapi_image.h  nvofapi_instance.cpp  nvofapi_instance.h
src/sysinfo/: nvapi_adapter.cpp  nvapi_adapter.h  nvml.cpp  nvml.h
src/util/: com_pointer.h  util_drs.h  util_env.cpp  util_env.h  util_log.cpp  util_log.h  util_pso_extension.h  util_statuscode.h
tests/: meson.build  nvapi_d3d11.cpp  nvapi_d3d12.cpp  nvapi_sysinfo.cpp  nvapi_sysinfo_nvml.cpp  nvapi_sysinfo_topo.cpp  nvapi_system.cpp  nvapi_tests_private.h  nvapi_vulkan.cpp
(+12 files in other folders)
